--- a/index.html
+++ b/index.html
@@ -1455,7 +1455,7 @@
                 <a
                   class="nav-link active"
                   data-bs-toggle="tab"
-                  data-bs-target="#academy"
+                  data-bs-target="#journal"
                   >Journal</a
                 >
               </li>
@@ -1463,7 +1463,7 @@
                 <a
                   class="nav-link"
                   data-bs-toggle="tab"
-                  data-bs-target="#journal"
+                  data-bs-target="#conference"
                   >Conference</a
                 >
               </li>
@@ -1479,113 +1479,11 @@
           </div>
 
           <div class="col-12 col-lg-8 tab-content">
-            <!-- Pub: Academy -->
-            <div id="academy" class="accordion tab-pane fade show active">
+            <!-- Pub: Journal -->
+            <div id="journal" class="accordion tab-pane fade show active">
               <!-- 2024 -->
               <h3>2024</h3>
-              <div class="container">Academy 2024</div>
-
-              <!-- 2023 -->
-              <h3>2023</h3>
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="card pub-card mb-4">
-                      <img src="img/c8.png" class="card-img-top" alt="..." />
-                      <div class="card-body">
-                        <p class="card-text">
-                          Radiation-Hardened Processing-In-Memory Crossbar Array
-                          With Hybrid Synapse Devices for Space Application
-                        </p>
-                      </div>
-                      <ul class="list-group list-group-flush">
-                        <li
-                          class="list-group-item d-flex align-items-center flex-wrap"
-                        >
-                          <span class="badge bg-warning text-dark">ICEIC</span>
-                        </li>
-                        <li
-                          class="list-group-item d-flex align-items-center flex-wrap"
-                        >
-                          <span class="badge bg-secondary me-2"
-                            >S.-U. Kang</span
-                          >
-                          <span class="badge bg-secondary me-2">J.-W. Han</span>
-                          <span class="badge bg-secondary">M.-S. Choo</span>
-                        </li>
-                        <li
-                          class="list-group-item d-flex align-items-center flex-wrap"
-                        >
-                          <span class="badge bg-success"
-                            >Radiation-Hardened</span
-                          >
-                          <span class="badge bg-success"
-                            >Processing-In-Memory</span
-                          >
-                          <span class="badge bg-success">Crossbar Array</span>
-                          <span class="badge bg-success"
-                            >Space Application</span
-                          >
-                        </li>
-                        <li
-                          class="list-group-item d-flex align-items-center flex-wrap"
-                        >
-                          <a
-                            class="card-text"
-                            href="https://ieeexplore.ieee.org/abstract/document/10049920"
-                          ></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card pub-card mb-4">
-                      <img src="img/c7.png" class="card-img-top" alt="..." />
-                      <div class="card-body">
-                        <p class="card-text">
-                          Direct Phase Control in Digital Phase-Locked Loop
-                          Mitigating Loop Delay Inside Digital Filter
-                        </p>
-                      </div>
-                      <ul class="list-group list-group-flush">
-                        <li
-                          class="list-group-item d-flex align-items-center flex-wrap"
-                        >
-                          <span class="badge bg-warning text-dark">ICEIC</span>
-                        </li>
-                        <li
-                          class="list-group-item d-flex align-items-center flex-wrap"
-                        >
-                          <span class="badge bg-secondary me-2"
-                            >I.-W. Jang</span
-                          >
-                          <span class="badge bg-secondary me-2"
-                            >M.-S. Choo</span
-                          >
-                        </li>
-                        <li
-                          class="list-group-item d-flex align-items-center flex-wrap"
-                        >
-                          <span class="badge bg-success">Phase Control</span>
-                          <span class="badge bg-success"
-                            >Digital Phase-Locked Loop</span
-                          >
-                          <span class="badge bg-success">Loop Delay</span>
-                          <span class="badge bg-success">Digital Filter</span>
-                        </li>
-                        <li
-                          class="list-group-item d-flex align-items-center flex-wrap text-end"
-                        >
-                          <a
-                            class="card-text"
-                            href="https://ieeexplore.ieee.org/abstract/document/10049900"
-                          ></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <div class="container">Journal 2024</div>
 
               <!-- 2022 -->
               <h3>2022</h3>
@@ -2586,16 +2484,269 @@
               </div>
             </div>
 
-            <!-- Pub: Journal-->
-            <div id="journal" class="accordion tab-pane fade">
+            <!-- Pub: Conference-->
+            <div id="conference" class="accordion tab-pane fade">
               <h3>2024</h3>
-              <div class="container">journal 2024</div>
+              <div class="container">conference 2024</div>
 
               <h3>2023</h3>
-              <div class="container">journal 2023</div>
+              <div class="container">
+                <div class="row">
+                  <!-- Conference 연번1 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img src="img/c8.png" class="card-img-top" alt="..." />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Radiation-Hardened Processing-In-Memory Crossbar Array
+                          With Hybrid Synapse Devices for Space Application
+                        </h5>
+                        <p class="card-text">2023.02</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark">ICEIC</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2">J.-W. Han</span>
+                          <span class="badge bg-secondary">M.-S. Choo</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success"
+                            >Radiation-Hardened</span
+                          >
+                          <span class="badge bg-success"
+                            >Processing-In-Memory</span
+                          >
+                          <span class="badge bg-success">Crossbar Array</span>
+                          <span class="badge bg-success"
+                            >Space Application</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a
+                            class="card-text"
+                            href="https://ieeexplore.ieee.org/abstract/document/10049920"
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
 
-              <h3>2022</h3>
-              <div class="container">journal 2022</div>
+                  <!-- Conference 연번2 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img src="img/c7.png" class="card-img-top" alt="..." />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Direct Phase Control in Digital Phase-Locked Loop
+                          Mitigating Loop Delay Inside Digital Filter
+                        </h5>
+                        <p class="card-text">2023.02</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark">ICEIC</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >I.-W. Jang</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">Phase Control</span>
+                          <span class="badge bg-success"
+                            >Digital Phase-Locked Loop</span
+                          >
+                          <span class="badge bg-success">Loop Delay</span>
+                          <span class="badge bg-success">Digital Filter</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap text-end"
+                        >
+                          <a
+                            class="card-text"
+                            href="https://ieeexplore.ieee.org/abstract/document/10049900"
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!-- Conference 연번3 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Phase Domain Response 분석을 통한 Injection-Locked
+                          Oscillator의 Locking Point 예측
+                        </h5>
+                        <p class="card-text">2023.06</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >2023 하계학술대회</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2">G.-Y. You</span>
+                          <span class="badge bg-secondary me-2">S.-W. Han</span>
+                          <span class="badge bg-secondary me-2"
+                            >J.-H. Kwon</span
+                          >
+                          <span class="badge bg-secondary me-2">D.-E Lee</span>
+                          <span class="badge bg-secondary me-2"
+                            >Y.-J Byeon</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap text-end"
+                        >
+                          <a
+                            class="card-text"
+                            href="https://ieeexplore.ieee.org/abstract/document/10049900"
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번4 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          PDR 기반 Injection Point에 따른 Injection-Locked
+                          Oscillator의 Locking Time 분석
+                        </h5>
+                        <p class="card-text">2023.06</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >2023 하계학술대회</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2">G.-Y. You</span>
+                          <span class="badge bg-secondary me-2">S.-W. Han</span>
+                          <span class="badge bg-secondary me-2">J.-G. Lee</span>
+                          <span class="badge bg-secondary me-2"
+                            >M.-G. Song</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap text-end"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번5 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Analysis of Channel Equalization on High-Speed Serial
+                          Data Communication
+                        </h5>
+                        <p class="card-text">2023.06</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >2023 하계학술대회</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2">T.-H. Kim</span>
+                          <span class="badge bg-secondary me-2">D.-H. Heo</span>
+                          <span class="badge bg-secondary me-2">J.-H. Lee</span>
+                          <span class="badge bg-secondary me-2">S.-M. Jin</span>
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap text-end"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <!-- Pub: Patent-->
