--- a/index.html
+++ b/index.html
@@ -2487,7 +2487,398 @@
             <!-- Pub: Conference-->
             <div id="conference" class="accordion tab-pane fade">
               <h3>2024</h3>
-              <div class="container">conference 2024</div>
+              <div class="container">
+                <div class="row">
+                  <!-- Conference 연번6 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Modeling of DSP-Based Receiver and Analysis Data Phase
+                          With Stochastic Method
+                        </h5>
+                        <p class="card-text">2024.01</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >KCS 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >J.-H. Kwon</span
+                          >
+                          <span class="badge bg-secondary me-2">T.-H. Kim</span>
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORDD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a
+                            class="card-text"
+                            href="https://ieeexplore.ieee.org/abstract/document/10049920"
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번7 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Technology of Channel Equalization at the Receiver in
+                          28nm CMOS
+                        </h5>
+                        <p class="card-text">2024.01</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >KCS 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2">D.-E. Lee</span>
+                          <span class="badge bg-secondary me-2">T.-H. Kim</span>
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORDD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a
+                            class="card-text"
+                            href="https://ieeexplore.ieee.org/abstract/document/10049920"
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번8 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Design of PAM4 Transmitter in 28-nm CMOS Technology
+                        </h5>
+                        <p class="card-text">2024.01</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >KCS 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >Y.-J. Byeon</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORDD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번9 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          An Analysis of 32-Gb/s and Full-Rate Phase
+                          Interpolator based Clock and Data Recovery
+                        </h5>
+                        <p class="card-text">2024.01</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >ICEIC 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2">D.-H. Heo</span>
+                          <span class="badge bg-secondary me-2">T.-H. Kim</span>
+                          <span class="badge bg-secondary me-2">K.-H. Lee</span>
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORDD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번10 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Hardware and Software Co-Simulation Methodology for
+                          Processing-In-Memory Bitcell application
+                        </h5>
+                        <p class="card-text">2024.01</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >ICEIC 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2">J.-G. Lee</span>
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORDD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번11 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Analysis of ADC Quantization Effect in
+                          Processing-In-Memory Macro in Various Low-Precision
+                          Deep Neural Networks
+                        </h5>
+                        <p class="card-text">2024.01</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >ICEIC 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2">S.-M. Jin</span>
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORDD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번12 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Vertical AND Cell Package : AND CiM 을 통한 BNN 운용
+                          방법론
+                        </h5>
+                        <p class="card-text">2024.05</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >2024 SOC 학술대회</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2">S.-M. Jin</span>
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORDD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 연번13 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Late Breaking Results: A General Purpose
+                          Compute-in-Memory Architecture with ADC-Awared Neural
+                          Networks
+                        </h5>
+                        <p class="card-text">2024.06</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >DAC (WiP)</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >M.-G. Song</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORDD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
               <h3>2023</h3>
               <div class="container">
